--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 
 header > h1 {
     background-color: white;
-    width: 300px;
-    height: 50px;
+    max-width: 300px;
+    max-height: 50px;
     padding-top: 10px;
     text-align: center;
     border-radius: 20px;
@@ -15,8 +15,8 @@ header > h1 {
 
 section {
     background-color: white;
-    width: 500px;
-    height: 300px;
+    max-width: 500px;
+    max-height: 300px;
     padding-top: 20px;
     margin: auto;
     margin-top: 30px;
