--- a/style.css
+++ b/style.css
@@ -1,44 +1,61 @@
-body {
-    background-color: rgb(57, 101, 184);
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
-header > h1 {
-    background-color: white;
-    max-width: 300px;
-    max-height: 50px;
-    padding-top: 10px;
-    text-align: center;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
-    margin: auto;
+body {
+    background: black url(https://i.pinimg.com/originals/91/cf/8c/91cf8c45daa3d8ed35354a88320b6be1.jpg) left center no-repeat fixed;
+    background-size: 100% 100%;
+    color: white;
 }
 
 section {
-    background-color: white;
-    max-width: 500px;
-    max-height: 300px;
-    padding-top: 20px;
-    margin: auto;
-    margin-top: 30px;
-    border-radius: 20%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
-    text-align: center;
+    height: 100vh;
+    position: relative;
 }
 
-section > h1 {
-    font-size: 3em;
-    margin-top: 40px;
+header > h1 {
+    max-width: 250px;
+    max-height: 50px;
+    margin-top: 30px;
+    position: absolute;
+
+    top: 20%;
+    left: 45%;
+}
+
+main {
+    max-width: 200px;
+    max-height: 300px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 20px;
+    text-align: center;
+
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -100%);
+}
+
+main > h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
 }
 
 button {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 1.3em;
+    font-size: 1em;
     color: white;
-    width: 100px;
-    height: 60px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.336);
-    margin: auto;
+    padding: 15px;
     border: none;
+    margin-bottom: 5px;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 .iniciar {
