--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: black url(https://i.pinimg.com/originals/91/cf/8c/91cf8c45daa3d8ed35354a88320b6be1.jpg) left center no-repeat fixed;
+    background: black url(imagens/wallpaper01.jpg) left center no-repeat fixed;
     background-size: 100% 100%;
     color: white;
 }
